# Restaurant-Finder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
docs/: Improvements.md  phase-wise-architecture.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: FilterSidebar.tsx  Footer.tsx  Header.tsx  Hero.tsx  RestaurantCard.tsx  ResultsPanel.tsx
frontend/lib/: api.ts  types.ts
schemas/: canonical_schema.json
scripts/: start-dev.sh
src/recommender/: __init__.py
src/recommender/common/: __init__.py  errors.py  limits.py  models.py  paths.py
src/recommender/phase1/: __init__.py  config.py  export_schema.py  loader.py  normalize.py  schema.py  validate.py
src/recommender/phase2/: __init__.py  filter_engine.py  preferences.py
src/recommender/phase3/: __init__.py  client.py  config.py  engine.py  env.py  parser.py  prompts.py  reconcile.py
src/recommender/phase4/: __init__.py  app.py  main.py  schemas.py  service.py
src/recommender/phase4/web/: index.html
tests/: test_export_schema.py  test_groq_connection.py  test_loader_cache.py  test_loader_schema.py  test_normalize.py  test_paths.py  test_phase2_filter.py  test_phase3.py  test_phase4_api.py  test_validate.py
