[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recommender"
version = "0.1.0"
description = "AI-powered restaurant recommendation — Phase 1 data ingestion"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
    "pyarrow>=14.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]

[project.scripts]
recommender-validate-phase1 = "recommender.phase1.validate:main"
recommender-export-canonical-schema = "recommender.phase1.export_schema:main"
recommender-api = "recommender.phase4.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"recommender.phase4" = ["web/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
